--- a/Projects/Frontend/bazaar-frontend/src/screens/MyComments/MyCommentCard/mycommentcard.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/MyComments/MyCommentCard/mycommentcard.scss
@@ -3,6 +3,7 @@
   margin-bottom: 2rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 2rem;
+  display: flex;
   .commentName {
     margin-left: 0rem;
     color: blue;
