--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Order Cell/OrderCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Order Cell/OrderCell.xib
@@ -9,11 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OrderCell" customModule="Bazaar_iOS" customModuleProvider="target">
-            <connections>
-                <outlet property="Cancel_OrderButton" destination="o37-yG-uGW" id="R55-jl-fvK"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OrderCell" customModule="Bazaar_iOS" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableOrderCell" id="KGk-i7-Jjw" customClass="OrderCell" customModule="Bazaar_iOS" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="1000" height="500"/>
@@ -178,6 +174,7 @@
             <connections>
                 <outlet property="AdressLabel" destination="zMS-LX-1W6" id="Ttw-ja-Chw"/>
                 <outlet property="AmountLabel" destination="HfK-3r-haA" id="tXH-0B-j2z"/>
+                <outlet property="Cancel_OrderButton" destination="o37-yG-uGW" id="Oyi-Qp-WeU"/>
                 <outlet property="DatesLabel" destination="KhF-4T-yEA" id="izJ-PK-MAw"/>
                 <outlet property="Name_BrandLabel" destination="uoq-XW-hLg" id="a2X-ix-JP4"/>
                 <outlet property="Price_StatusLabel" destination="UwG-ug-UY2" id="7Th-Ob-Ek6"/>
