--- a/Projects/Frontend/bazaar-frontend/src/screens/MyComments/MyCommentCard/mycommentcard.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/MyComments/MyCommentCard/mycommentcard.scss
@@ -1,4 +1,4 @@
-.commentWrapper {
+.MycommentWrapper {
   margin-left: 0rem;
   margin-bottom: 2rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
