--- a/Projects/Frontend/bazaar-frontend/src/screens/MyOrders/my-orders.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/MyOrders/my-orders.scss
@@ -13,6 +13,10 @@
     border-width: 2px;
     margin-top: 30px;
 
+    & .on-the-way-button-div {
+      padding-left: 0;
+    }
+
     & .delivery-button-div {
       padding-left: 0;
       margin: auto;
@@ -23,6 +27,7 @@
         }
       }
     }
+
     & .order-column {
       margin: auto;
 
