--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Notification Cell/NotificationCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Notification Cell/NotificationCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,37 +13,42 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableNotfCell" rowHeight="250" id="KGk-i7-Jjw" customClass="NotificationCell" customModule="Bazaar_iOS" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="488" height="145"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="488" height="145"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QuQ-GF-fng" userLabel="Body Label">
-                        <rect key="frame" x="145" y="51" width="41.5" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3w4-XW-I9z" userLabel="Time Label">
-                        <rect key="frame" x="145" y="91.5" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="notification_icon" translatesAutoresizingMaskIntoConstraints="NO" id="UMt-fw-zpm">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="notification_icon" translatesAutoresizingMaskIntoConstraints="NO" id="UMt-fw-zpm">
                         <rect key="frame" x="5" y="5" width="130" height="130"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="130" id="8M9-iS-9Va"/>
                             <constraint firstAttribute="width" secondItem="UMt-fw-zpm" secondAttribute="height" multiplier="1:1" id="jSy-l0-UlC"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GxX-bz-eo5" userLabel="Product Name">
-                        <rect key="frame" x="145" y="10" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fCN-dP-bUA" userLabel="Seen Status Label">
-                        <rect key="frame" x="426" y="114" width="42" height="21"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="A07-wj-VpT">
+                        <rect key="frame" x="145" y="10" width="333" height="101.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GxX-bz-eo5" userLabel="Product Name">
+                                <rect key="frame" x="0.0" y="0.0" width="333" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QuQ-GF-fng" userLabel="Body Label">
+                                <rect key="frame" x="0.0" y="40.5" width="333" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3w4-XW-I9z" userLabel="Time Label">
+                                <rect key="frame" x="0.0" y="81" width="333" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fCN-dP-bUA" userLabel="Seen Status Label">
+                        <rect key="frame" x="426.5" y="111.5" width="41.5" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -51,16 +56,14 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="fCN-dP-bUA" secondAttribute="trailing" constant="20" id="7Zu-XP-5bQ"/>
-                    <constraint firstItem="3w4-XW-I9z" firstAttribute="top" secondItem="QuQ-GF-fng" secondAttribute="bottom" constant="20" id="KcE-03-iqf"/>
-                    <constraint firstItem="3w4-XW-I9z" firstAttribute="leading" secondItem="UMt-fw-zpm" secondAttribute="trailing" constant="10" id="TlA-I6-HP8"/>
                     <constraint firstItem="UMt-fw-zpm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Ud1-8a-eyU"/>
-                    <constraint firstItem="GxX-bz-eo5" firstAttribute="leading" secondItem="UMt-fw-zpm" secondAttribute="trailing" constant="10" id="b2Q-aH-7Ql"/>
-                    <constraint firstItem="GxX-bz-eo5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="h72-lG-b1N"/>
-                    <constraint firstItem="QuQ-GF-fng" firstAttribute="top" secondItem="GxX-bz-eo5" secondAttribute="bottom" constant="20" id="l2m-fH-7Jg"/>
+                    <constraint firstItem="A07-wj-VpT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="aYo-uz-LOq"/>
+                    <constraint firstItem="fCN-dP-bUA" firstAttribute="top" secondItem="A07-wj-VpT" secondAttribute="bottom" id="hAx-Hz-6wC"/>
+                    <constraint firstItem="A07-wj-VpT" firstAttribute="leading" secondItem="UMt-fw-zpm" secondAttribute="trailing" constant="10" id="mCY-gJ-kO2"/>
                     <constraint firstItem="UMt-fw-zpm" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="mLN-CH-hV0"/>
                     <constraint firstAttribute="bottom" secondItem="fCN-dP-bUA" secondAttribute="bottom" constant="10" id="mkZ-03-LiM"/>
+                    <constraint firstAttribute="trailing" secondItem="A07-wj-VpT" secondAttribute="trailing" constant="10" id="t1e-D0-218"/>
                     <constraint firstItem="UMt-fw-zpm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="uZy-w4-QVp"/>
-                    <constraint firstItem="QuQ-GF-fng" firstAttribute="leading" secondItem="UMt-fw-zpm" secondAttribute="trailing" constant="10" id="zKl-5J-gsK"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
