public-private lists bug fixed.

--- a/Projects/Frontend/bazaar-frontend/src/screens/MyList/mylist.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/MyList/mylist.scss
@@ -1,6 +1,7 @@
 .listWrapper {
   padding-top: 3rem;
   margin-left: 0rem !important;
+  min-height: 40rem;
   & .lists {
     & h2 {
       margin-left: 2rem;
