Delete comment func

--- a/Projects/Frontend/bazaar-frontend/src/screens/MyComments/MyCommentCard/mycommentcard.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/MyComments/MyCommentCard/mycommentcard.scss
@@ -22,4 +22,12 @@
   .commentContent {
     margin-left: 0rem;
   }
+
+  & .commentRemoveButton {
+    border: 0rem;
+    background: transparent;
+    & img {
+      max-width: 2rem;
+    }
+  }
 }
