cart now redirects to checkout. style changes in orders pages.

--- a/Projects/Frontend/bazaar-frontend/src/screens/Inventory/inventory.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Inventory/inventory.scss
@@ -32,3 +32,15 @@
       color: black;
   }
 }
+
+.price-block {
+  margin-left: 0!important;
+}
+.tl-div {
+  padding-left: 5px!important;
+}
+.label-margin {
+  vertical-align: middle!important;
+  margin-bottom: auto;
+  margin-top: auto;
+}
