--- a/Projects/Frontend/bazaar-frontend/src/screens/MyOrders/my-orders-vendor.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/MyOrders/my-orders-vendor.scss
@@ -25,3 +25,11 @@
   }
 }
 
+.recipient-name {
+  color: black;
+}
+
+.recipient-name:hover {
+  color: #f3ac4f!important;
+  text-decoration: none!important;
+}
