footer color change.

--- a/Projects/Frontend/bazaar-frontend/src/components/Footer/footer.css
+++ b/Projects/Frontend/bazaar-frontend/src/components/Footer/footer.css
@@ -2,7 +2,7 @@
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
 #footer {
-    background: #007b5e !important;
+    background: #19706c !important;
     padding: 30px;
 }
 
