Hotfix OrderDetail table

--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n1Y-by-cQR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n1Y-by-cQR">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -511,7 +511,7 @@
                                 <rect key="frame" x="10" y="146" width="394" height="53.666666666666657"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bOO-Bd-GRi" userLabel="Rating">
-                                        <rect key="frame" x="0.0" y="8.3333333333333144" width="42" height="34"/>
+                                        <rect key="frame" x="0.0" y="9.6666666666666572" width="42" height="34"/>
                                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="contentEdgeInsets" minX="10" minY="6" maxX="10" maxY="6"/>
@@ -7601,9 +7601,6 @@ If you have any questions about these terms, please contact us.
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WrX-x2-AFB" userLabel="Address/Card Info Stack View">
-                                <rect key="frame" x="10" y="117.66666666666667" width="394" height="179.33333333333331"/>
-                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="inA-PR-tUy">
                                 <rect key="frame" x="10" y="54" width="209" height="53.666666666666657"/>
                                 <subviews>
@@ -7638,7 +7635,7 @@ If you have any questions about these terms, please contact us.
                                 </constraints>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="250" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="i2i-T7-aTp" userLabel="List Products Table View">
-                                <rect key="frame" x="10" y="307" width="394" height="545"/>
+                                <rect key="frame" x="10" y="127.66666666666669" width="394" height="724.33333333333326"/>
                                 <color key="backgroundColor" systemColor="tertiarySystemFillColor"/>
                                 <color key="separatorColor" systemColor="tertiarySystemFillColor"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -7651,18 +7648,14 @@ If you have any questions about these terms, please contact us.
                         <viewLayoutGuide key="safeArea" id="dVf-i5-Tkf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="i2i-T7-aTp" firstAttribute="top" secondItem="WrX-x2-AFB" secondAttribute="bottom" constant="10" id="I4X-9t-t9Z"/>
                             <constraint firstItem="inA-PR-tUy" firstAttribute="top" secondItem="dVf-i5-Tkf" secondAttribute="top" constant="10" id="JNB-mB-wBI"/>
                             <constraint firstItem="dVf-i5-Tkf" firstAttribute="trailing" secondItem="i2i-T7-aTp" secondAttribute="trailing" constant="10" id="Mc6-8y-OTJ"/>
-                            <constraint firstItem="WrX-x2-AFB" firstAttribute="height" secondItem="0HP-Wd-W50" secondAttribute="height" multiplier="0.2" id="Pdn-cJ-n5k"/>
                             <constraint firstItem="E7X-em-xI4" firstAttribute="width" secondItem="inA-PR-tUy" secondAttribute="height" id="SvW-qD-6Mi"/>
                             <constraint firstItem="dVf-i5-Tkf" firstAttribute="bottom" secondItem="i2i-T7-aTp" secondAttribute="bottom" constant="10" id="XWi-Qa-3Yy"/>
                             <constraint firstItem="inA-PR-tUy" firstAttribute="leading" secondItem="dVf-i5-Tkf" secondAttribute="leading" constant="10" id="e6H-wx-rku"/>
                             <constraint firstItem="inA-PR-tUy" firstAttribute="height" secondItem="0HP-Wd-W50" secondAttribute="height" multiplier="0.06" id="hBz-Ta-bBL"/>
-                            <constraint firstItem="WrX-x2-AFB" firstAttribute="top" secondItem="inA-PR-tUy" secondAttribute="bottom" constant="10" id="oQk-Fk-z0N"/>
+                            <constraint firstItem="i2i-T7-aTp" firstAttribute="top" secondItem="inA-PR-tUy" secondAttribute="bottom" constant="20" id="oJJ-ZQ-ukN"/>
                             <constraint firstItem="i2i-T7-aTp" firstAttribute="leading" secondItem="dVf-i5-Tkf" secondAttribute="leading" constant="10" id="s3m-vp-7WJ"/>
-                            <constraint firstItem="dVf-i5-Tkf" firstAttribute="trailing" secondItem="WrX-x2-AFB" secondAttribute="trailing" constant="10" id="yFX-q1-Lrx"/>
-                            <constraint firstItem="WrX-x2-AFB" firstAttribute="leading" secondItem="dVf-i5-Tkf" secondAttribute="leading" constant="10" id="zDM-DP-5CN"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="srt-Rx-Yfq"/>
@@ -7754,6 +7747,9 @@ If you have any questions about these terms, please contact us.
         </systemColor>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="scrollViewTexturedBackgroundColor">
+            <color red="0.43529411764705878" green="0.44313725490196082" blue="0.47450980392156861" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="scrollViewTexturedBackgroundColor">
             <color red="0.43529411764705878" green="0.44313725490196082" blue="0.47450980392156861" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
